1 attemp to fix disconnection failure

--- a/App-android/AggregateScankt/app/src/main/res/values/strings.xml
+++ b/App-android/AggregateScankt/app/src/main/res/values/strings.xml
@@ -14,9 +14,10 @@
     <string name="str_target_description">Target</string>
 
     <string name="str_waiting">Waiting…</string>
+    <string name="str_sending">Sending…</string>
     <string name="str_sent">Sent!</string>
-    <string name="str_received">Received!</string>
     <string name="str_listening">Listening…</string>
+    <string name="str_received">Received!</string>
     <string name="str_scan">Scan</string>
     <string name="str_camera">Camera</string>
     <string name="str_status">STATUS</string>
